# qaptupdator

./: CMakeLists.txt  README.md  UpgradeModel.cpp  UpgradeModel.h  cacheupdatewidget.cpp  cacheupdatewidget.h  commitwidget.cpp  dependence.sh  main.cpp  myapp.po  org.jingos.qaptupdator.desktop  org.jingos.qaptupdator.xml  qapt.csv  qapttest.cpp  qapttest.h  resource.qrc  updator.po
debian/: changelog  control  qaptupdator.postinst  rules  watch
po/zh_CN/: qaptupdator.po
qml/: Loading.qml  RoButton.qml  main.qml  update.qml
